chore: Add linter and spell checker configurations
- Introduced `.mega-linter.yml` for comprehensive linter settings, minimizing false positives while ensuring code quality.
- Added `cspell.config.yaml` for spell checking with custom dictionaries and ignore paths.
- Updated `.prettierignore` to exclude Markdown files and generated directories.
- Enhanced `.pre-commit-config.yaml` with additional hooks for linting and formatting.

Tested all configurations; linter and spell checker operate as expected without errors.

Signed-off-by: UncleSp1d3r <unclesp1d3r@evilbitlabs.io>

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,11 @@
+# Prettier ignore file - exclude Markdown per user preference
+*.md
 **/*.md
-**/*.yml
+
+# Generated files
+target/
+dist/
+build/
+node_modules/
+docs/book/
+.github/workflows/release.yml
